--- a/style.css
+++ b/style.css
@@ -8,16 +8,16 @@
 
 
 body {
-    background-color: background: #200122;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom, #6f0000, #200122);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom, #6f0000, #200122); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
+    background-color: pink;   
     font-family: 'Roboto', arial, helvetica;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;    
     margin: 0;
+
+    width: 100%;
+    overflow-x: hidden;
 }
 
 h1,h3 {
@@ -26,12 +26,17 @@ h1,h3 {
 }
 
 h1 {
-    font-size: 27px;
+    text-align: center;
+    font-size: 16px;
 }
 
-h3 {
-    font-size: 25px;
+h3,h2 {
+    font-size: 14px;
     color: yellow;
+}
+
+h2 {
+    background-color: black;
 }
 
 .box {
@@ -41,13 +46,15 @@ h3 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 400px;
+    width: 200px;
     height: 200px;
     margin: 16px;
     border-radius: 10px;
     box-shadow: 2px 4px 5px rgba(0,0,0,0.3);
     transform: translateX(400%);
     transition: transform 0.4s ease;
+
+    overflow-x: hidden;
 }
 
 .box:nth-of-type(even) {
@@ -59,7 +66,7 @@ h3 {
 }
 
 .box p {
-    font-size: 20px;
+    font-size: 12px;
     text-align: center;
     max-width: 80%;
 }
@@ -67,12 +74,4 @@ h3 {
 img {
     padding: 100px;
     max-width: 100%;
-}
-
-.boximg {    
-    color: #fff;
-    background-color: transparent;
-    margin: 200px;
-    border-radius:0;
-    box-shadow: none;    
 }
